# pywebview-angular-template

./: .gitignore  LICENSE  MANIFEST.in  README.md  angular.json  app.py  build.spec  package-lock.json  package.json  pyproject.toml
src/: index.html  typings.d.ts  window.interface.ts
src/app/: app.html  app.spec.ts  app.ts
src/pysrc/: api.py  cli.py  main.py
